; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_sge.c_unexpected_offload.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_sge.c_unexpected_offload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32, i32 }
%struct.freelQ = type { i64, %struct.freelQ_ce* }
%struct.freelQ_ce = type { %struct.sk_buff* }
%struct.sk_buff = type { i32* }

@dma_addr = common dso_local global i32 0, align 4
@dma_len = common dso_local global i32 0, align 4
@PCI_DMA_FROMDEVICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"%s: unexpected offload packet, cmd %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adapter*, %struct.freelQ*)* @unexpected_offload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unexpected_offload(%struct.adapter* %0, %struct.freelQ* %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca %struct.freelQ*, align 8
  %5 = alloca %struct.freelQ_ce*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store %struct.freelQ* %1, %struct.freelQ** %4, align 8
  %7 = load %struct.freelQ*, %struct.freelQ** %4, align 8
  %8 = getelementptr inbounds %struct.freelQ, %struct.freelQ* %7, i32 0, i32 1
  %9 = load %struct.freelQ_ce*, %struct.freelQ_ce** %8, align 8
  %10 = load %struct.freelQ*, %struct.freelQ** %4, align 8
  %11 = getelementptr inbounds %struct.freelQ, %struct.freelQ* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds %struct.freelQ_ce, %struct.freelQ_ce* %9, i64 %12
  store %struct.freelQ_ce* %13, %struct.freelQ_ce** %5, align 8
  %14 = load %struct.freelQ_ce*, %struct.freelQ_ce** %5, align 8
  %15 = getelementptr inbounds %struct.freelQ_ce, %struct.freelQ_ce* %14, i32 0, i32 0
  %16 = load %struct.sk_buff*, %struct.sk_buff** %15, align 8
  store %struct.sk_buff* %16, %struct.sk_buff** %6, align 8
  %17 = load %struct.adapter*, %struct.adapter** %3, align 8
  %18 = getelementptr inbounds %struct.adapter, %struct.adapter* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.freelQ_ce*, %struct.freelQ_ce** %5, align 8
  %21 = load i32, i32* @dma_addr, align 4
  %22 = call i32 @pci_unmap_addr(%struct.freelQ_ce* %20, i32 %21)
  %23 = load %struct.freelQ_ce*, %struct.freelQ_ce** %5, align 8
  %24 = load i32, i32* @dma_len, align 4
  %25 = call i32 @pci_unmap_len(%struct.freelQ_ce* %23, i32 %24)
  %26 = load i32, i32* @PCI_DMA_FROMDEVICE, align 4
  %27 = call i32 @pci_dma_sync_single_for_cpu(i32 %19, i32 %22, i32 %25, i32 %26)
  %28 = load %struct.adapter*, %struct.adapter** %3, align 8
  %29 = getelementptr inbounds %struct.adapter, %struct.adapter* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %32 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @CH_ERR(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %30, i32 %34)
  %36 = load %struct.freelQ*, %struct.freelQ** %4, align 8
  %37 = load %struct.freelQ*, %struct.freelQ** %4, align 8
  %38 = getelementptr inbounds %struct.freelQ, %struct.freelQ* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = call i32 @recycle_fl_buf(%struct.freelQ* %36, i64 %39)
  ret void
}

declare dso_local i32 @pci_dma_sync_single_for_cpu(i32, i32, i32, i32) #1

declare dso_local i32 @pci_unmap_addr(%struct.freelQ_ce*, i32) #1

declare dso_local i32 @pci_unmap_len(%struct.freelQ_ce*, i32) #1

declare dso_local i32 @CH_ERR(i8*, i32, i32) #1

declare dso_local i32 @recycle_fl_buf(%struct.freelQ*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
